@@ -7,5 +7,9 @@ https://github.com/JanLishak/HeaterController
 /DiagramExports - exported high res png of diagrams
 /HeaterControllerProject - Java project module
 
+note: add VM options to run JavaFX prjects
+Windows: --module-path "C:\Program Files\Java\javafx-sdk-12.0.2\lib" --add-modules javafx.controls,javafx.fxml
+Linux: 
+
 
 
